Fix #65
Calls separation into validation and copy
Encoding added for transformation/validation/sipcreator

Part of changes for #77 checked in (not done)
